(lang dune 3.17)

(name concurrency_problems_ocaml)

(generate_opam_files true)

(source
 (github is-hoku/concurrency-problems-ocaml))

(authors "Hoku Ishibe <contact@hokuishi.be>")

(maintainers "Hoku Ishibe <contact@hokuishi.be>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name concurrency_problems_ocaml)
 (synopsis "Concurrency Problems in OCaml")
 (description "Collection of Concurrency Problems in OCaml")
 (depends ocaml dune)
)
